# traffic-flow-package-src

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  changes.txt  constants.py  constraints.txt  data_loader_orchestrator.py  data_pipeline_orchestrator.py  data_pipeline_orchestrator_deprecated.py  data_processing.py  data_processing_old.py  environment.yml  features.py  helper_functions.py  helper_utils.py  model_comparison.py  model_tuning.py  my_changes.diff  payload.json  post_processing.py  pyproject.toml  residual_model_comparison.py  residual_pipeline_orchestrator.py  sensor_encoder.py  visualization_utils.py  visualization_utils_updated.py  visualization_utils_with_residual_model.py  visualization_utils_with_sota_grouped_legend.py
artifacts/: training_metadata.json
constants/: upstream_dict.json
data/: downstream_dict.json  upstream_dict.json
data_loading/: data_loader_orchestrator.py  data_loader_orchestrator_deprecated.py
docker/: Dockerfile  docker-compose.yaml  gunicorn.conf.py
evaluation/: model_comparison.py
features/: __init__.py  base.py  gman_features.py  historical_reference_features.py  historical_reference_features_deprecated.py  misc_features.py  sensor_encoder.py  temporal_features.py
modeling/: model_tuning.py
models/: best_model_XGBoost_from_train_xgb.pkl
pipeline/: data_pipeline_orchestrator.py  data_pipeline_orchestrator_deprecated.py  residual_pipeline_orchestrator.py
post_processing/: __init__.py  post_processing.py
scripts/: compare_api_vs_local.py  compare_api_vs_local_predictions.py  compare_offline_vs_local_vs_api_preds.ipynb  compare_offline_vs_local_vs_api_preds.py  compare_offline_vs_local_vs_api_preds_2.ipynb  compare_offline_vs_local_vs_api_preds_3.ipynb  compare_xgb_vs_lstm.ipynb  gen_constraints.py  make_payload.py  make_payload_deprecated.py  predict_one_sensor.py  run_tabular_upstream_shift_sweep.py  tabular_adj_congestion_sweep.py  tabular_momentum_sweep.py  tabular_momentum_sweep_2.py  tabular_time_cyc_sweep.py  train_xgb.py
src/traffic_flow/: __init__.py
traffic_flow/: __init__.py
utils/: helper_utils.py  ppt_presentation_matrices.py  visualization_utils.py  visualization_utils_with_residual_model.py  (+1 more)
(+83 files in other folders)
