[project]
name = "traffic-flow"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0,<3.0",
  "scikit-learn>=1.4,<2.0",
  "xgboost>=2.0,<3.0",
  "joblib>=1.4,<2.0"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "traffic_flow"}     # <-- top-level package lives here

[tool.setuptools.packages.find]
where = ["traffic_flow"]               # auto-discover sub-packages

[project.optional-dependencies]
service = [
  "flask>=2.3,<3.0",
  "gunicorn>=21,<22"
]