[project]
name = "traffic-flow"
version = "0.1.1"
requires-python = ">=3.10,<3.12"

dependencies = [
  "numpy>=1.26,<1.27",
  "pandas>=2.0,<3.0",
  "scipy>=1.11,<1.12",
  "scikit-learn>=1.4,<1.5",     # compatible with kserve’s 1.4.0 pin
  "xgboost>=2.0,<3.0",
  "joblib>=1.4,<2.0",
  "requests>=2.31,<3",
  "nbformat>=5.10,<6"           
]

[project.optional-dependencies]
service = [
  "flask>=2.3.3,<2.4",
  "gunicorn>=21.2,<22"
]
parquet = [
  "pyarrow>=16.1.0,<17",
  "fastparquet>=2024.5.0,<2025.0.0"
]
vis = [
  "plotly>=5.19,<6",
  "seaborn>=0.13,<0.14"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["traffic_flow*"]